Delegated scrolling: Assertion on attempt to show a CSS sticky element https://bugs.webkit.org/show_bug.cgi?id=106890

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

The problem was that frame view (when delegated scrolling enabled) calculated the positions of sticky elements for
a scroll event before sending scroll request. In case of multiple scroll events that caused assertion as the response
for previous scroll request was received after the expected sticky elements positions had been already updated for the following
scroll request.

No new tests. Covered by existing 'fast/css/sticky' tests.

* page/FrameView.cpp:
(WebCore::FrameView::setFixedVisibleContentRect):
* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollTo):

Tools:

Enabled fixed layout mode in WTR for 'fast/css/sticky' tests.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::shouldUseFixedLayout):
(WTR):
(WTR::updateLayoutType):

LayoutTests:

Skipped failing css/sticky tests on WK2 EFL.

* platform/efl-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/125616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140262 268f45cc-cd09-0410-ab3c-d52691b4dbfc